[tool.poetry]
name = "face-anonymizer"
version = "0.1.0"
description = ""
authors = ["Jenil Padshala <jenilpadshala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
